fixed footer spacing issue

--- a/base_theme/static/base_theme/scss/scss/layout/_footer.scss
+++ b/base_theme/static/base_theme/scss/scss/layout/_footer.scss
@@ -164,6 +164,14 @@
   }
 }
 
+@media only screen and (min-width: 893px) and (max-width: 893px) {
+  #footer {
+	  .col-md-2 {
+			width: 30%;
+		}
+	}
+}
+
 /*------------------------------------*\
     #QUICKLINKS
 \*------------------------------------*/
